--- a/index.html
+++ b/index.html
@@ -465,13 +465,13 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Prezentace: Kvalita života">4. Způsob života lze charakterizovat jako vztah společnosti a individua a jako podmínky v ... </h1>
+<h1 title="Prezentace: Kvalita života">4. Způsob života lze charakterizovat jako ... </h1>
 <hr/>
 <input class="display" id="text4" placeholder="answer">
 <br/>
 <button onclick="fn4()" id = "btn4">Klikni</button>
 <button id="cudlik4" style="display:none" onclick="next(4)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='dané hist. době'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='vztah společnosti a individua'">Tajenka</p>
 </div>
 
 <div class="container">
@@ -515,23 +515,23 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Prezentace: Kvalita života">9. Sportem je dle Evropské charty sportu a dle zákona 115/2001 Sb. každá forma tělesné činnosti, která si prostřednictvím organizované i neorganizované účasti klade za cíl ..., rozvoj společenských vztahů, upevňování zdraví a dosahování sportovních výkonů rekreačně nebo v soutěžích všech úrovní, a to individuálně nebo společně.</h1>
+<h1 title="Prezentace: Kvalita života">9. Způsob života lze charakterizovat jako vztah společnosti a individua, ... </h1>
 <hr/>
 <input class="display" id="text9" placeholder="answer">
 <br/>
 <button onclick="fn9()" id = "btn9">Klikni</button>
 <button id="cudlik9" style="display:none" onclick="next(9)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='harmonický rozvoj tělesné i psychické kondice'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='podmínky v dané hist. době'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1 title="Prezentace: Kvalita života">10. Sportem je dle ... a dle zákona ... každá forma tělesné činnosti, která si prostřednictvím organizované i neorganizované účasti klade za cíl harmonický rozvoj tělesné i psychické kondice, rozvoj společenských vztahů, upevňování zdraví a dosahování sportovních výkonů rekreačně nebo v soutěžích všech úrovní, a to individuálně nebo společně.</h1>
+<h1 title="Prezentace: Kvalita života">10. Způsob života lze charakterizovat jako vztah společnosti a individua, podmínky v dané hist. době (...).</h1>
 <hr/>
 <input class="display" id="text10" placeholder="answer">
 <br/>
 <button onclick="fn10()" id = "btn10">Klikni</button>
 <button id="cudlik10" style="display:none" onclick="next(10)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Evropské charty sportu; 115/2001 Sb.'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='typ hospodářství, geopol. podmínky, ideologie'">Tajenka</p>
 </div>
 
 <div class="container">
@@ -1468,7 +1468,7 @@ document.getElementById('zvuk3').play(); return false;
 
 function fn4()
 {
-if (document.getElementById("text4").value == "dané hist. době") {
+if (document.getElementById("text4").value == "vztah společnosti a individua") {
 document.getElementById('cudlik4').style.display = "inline";
 document.getElementById('zvuk4').play(); return false;
 }
@@ -1510,7 +1510,7 @@ document.getElementById('zvuk8').play(); return false;
 
 function fn9()
 {
-if (document.getElementById("text9").value == "harmonický rozvoj tělesné i psychické kondice") {
+if (document.getElementById("text9").value == "podmínky v dané hist. době") {
 document.getElementById('cudlik9').style.display = "inline";
 document.getElementById('zvuk9').play(); return false;
 }
@@ -1518,7 +1518,7 @@ document.getElementById('zvuk9').play(); return false;
 
 function fn10()
 {
-if (document.getElementById("text10").value == "Evropské charty sportu; 115/2001 Sb.") {
+if (document.getElementById("text10").value == "typ hospodářství, geopol. podmínky, ideologie") {
 document.getElementById('cudlik10').style.display = "inline";
 document.getElementById('zvuk10').play(); return false;
 }
