--- a/index.html
+++ b/index.html
@@ -625,53 +625,53 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Prezentace: Kvalita života">11. Životní styl lze charakterizovat jako paletu prakticky všech lidských aktivit od myšlení, přes chování až po jednání a to takových, které zaujímají v životě trvalejší místo, většinou se opakují, jsou typické a předvídatelné. Nejčastěji se posuzuje podle názorů, postojů a chování.</h1>
+<h1 title="Slepičková: Sociologie životního stylu a sport">20. Dle teorie kulturních preferencí "omnivore-univore" lze říci, že čím je ... jedince ve společnosti nižší, tím méně pestrá je i ... .</h1>
 <hr/>
 <input class="display" id="text20" placeholder="answer">
 <br/>
 <button onclick="fn20()" id = "btn20">Klikni</button>
 <button id="cudlik20" style="display:none" onclick="next(20)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='obecným zákonem'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='sociální pozice; jeho spotřeba'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: http://gymnazium1.milevsko.cz/dokumenty/ekf2/inf/inflace.html">21. "Jednej jen podle té maximy, od níž můžeš zároveň chtít, aby ... obecným zákonem" </h1>
+<h1 title="Slepičková: Sociologie životního stylu a sport">21. ... chápe životní styl a způsob života jako ... .</h1>
 <hr/>
 <input class="display" id="text21" placeholder="answer">
 <br/>
 <button onclick="fn21()" id = "btn21">Klikni</button>
 <button id="cudlik21" style="display:none" onclick="next(21)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='se stala'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='Šafr; synonyma'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: http://gymnazium1.milevsko.cz/dokumenty/ekf2/inf/inflace.html">22. ... povídal, že ... vede k despotismu. </h1>
+<h1 title="Slepičková: Sociologie životního stylu a sport">22. Zde, jak je patrno, v českých pracích ... a ani neexistuje ... . V zahraniční pracích (např. Kay, 2006; Mehus, 2005; Mignon, 2002; Sack, 2000; Slater, 2005; Weaton, 2004) tomuto problému není přikládána váha, zřejmě proto, že zde není mezi pojmy spatřován žádný rozdíl a hovoří se pouze o životním stylu. </h1>
 <hr/>
 <input class="display" id="text22" placeholder="answer">
 <br/>
 <button onclick="fn22()" id = "btn22">Klikni</button>
 <button id="cudlik22" style="display:none" onclick="next(22)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='John Locke; Hobbesova teorie'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='shoda neexistuje; opodstatněné vysvětlení rozdílu'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: https://dl3.cuni.cz/pluginfile.php/117807/mod_resource/content/1/Sokol%20-%20Deontologie%20-%20Kant%20-%20kategorick%C3%BD%20imperativ.pdf str.104">23. Kategorický imperativ "vynalezl" ...  </h1>
+<h1 title="Slepičková: Sociologie životního stylu a sport">23. Zde, jak je patrno, v českých pracích shoda neexistuje a ani neexistuje opodstatněné vysvětlení rozdílu. V zahraniční pracích (např. Kay, 2006; Mehus, 2005; Mignon, 2002; Sack, 2000; Slater, 2005; Weaton, 2004) tomuto problému není přikládána váha, zřejmě proto, že zde není mezi pojmy spatřován ... a hovoří se pouze o ... .  </h1>
 <hr/>
 <input class="display" id="text23" placeholder="answer">
 <br/>
 <button onclick="fn23()" id = "btn23">Klikni</button>
 <button id="cudlik23" style="display:none" onclick="next(23)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Immanuel Kant'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='žádný rozdíl; životním stylu'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: https://dl3.cuni.cz/pluginfile.php/117807/mod_resource/content/1/Sokol%20-%20Deontologie%20-%20Kant%20-%20kategorick%C3%BD%20imperativ.pdf str. 106">24. Kant odmítá, že by se člověk měl podřizovat pravidlům a zákonům, která mu vnucuje ... či hrozba. </h1>
+<h1 title="Slepičková: Sociologie životního stylu a sport">24. Rodiče s vyšším, zejména vysokoškolským vzděláním, více podporují závodní účast svých dětí ... (což s sebou nese pravidelné sportování několikrát týdně).  </h1>
 <hr/>
 <input class="display" id="text24" placeholder="answer">
 <br/>
 <button onclick="fn24()" id = "btn24">Klikni</button>
 <button id="cudlik24" style="display:none" onclick="next(24)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='cizí autorita'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='ve sportu'">Tajenka</p>
 </div>
 
 <div class="container">
@@ -1602,7 +1602,7 @@ document.getElementById('zvuk19').play(); return false;
 
 function fn20()
 {
-if (document.getElementById("text20").value == "obecným zákonem") {
+if (document.getElementById("text20").value == "sociální pozice; jeho spotřeba") {
 document.getElementById('cudlik20').style.display = "inline";
 document.getElementById('zvuk20').play(); return false;
 }
@@ -1610,7 +1610,7 @@ document.getElementById('zvuk20').play(); return false;
 
 function fn21()
 {
-if (document.getElementById("text21").value == "se stala") {
+if (document.getElementById("text21").value == "Šafr, synonyma") {
 document.getElementById('cudlik21').style.display = "inline"
 document.getElementById('zvuk21').play(); return false;;
 }
@@ -1626,7 +1626,7 @@ document.getElementById('zvuk22').play(); return false;
 
 function fn23()
 {
-if (document.getElementById("text23").value == "Immanuel Kant") {
+if (document.getElementById("text23").value == "žádný rozdíl; životním stylu") {
 document.getElementById('cudlik23').style.display = "inline";
 document.getElementById('zvuk23').play(); return false;
 }
@@ -1634,7 +1634,7 @@ document.getElementById('zvuk23').play(); return false;
 
 function fn24()
 {
-if (document.getElementById("text24").value == "cizí autorita") {
+if (document.getElementById("text24").value == "ve sportu") {
 document.getElementById('cudlik24').style.display = "inline";
 document.getElementById('zvuk24').play(); return false;
 }
