Dalsi otazky pridane

--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Slepičková: Sociologie životního stylu">27. Sporty životního stylu jsou historicky ... . Velmi často nějakým způsobem reagují na vývoj společnosti (nezaměstnanost mladých, nesouhlas s dominantními společenskými hodnotami a pod.). Bývají součástí určité subkultury spojené se specifickou hudbou, módou, způsobem vyjadřování (slangem). Např. surfing začal být vnímán jako sport, který vymezuje určitou část mladé populace vůči ostatní společnosti, v 60-70tých letech minulého století. Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor pro svobodu, distancování se od institucionalizovaných forem moci, vyjádření negativního postoje vůči autoritám.  </h1>
+<h1 title="Slepičková: Sociologie životního stylu a sport">27. Sporty životního stylu jsou historicky ... . Velmi často nějakým způsobem reagují na vývoj společnosti (nezaměstnanost mladých, nesouhlas s dominantními společenskými hodnotami a pod.). Bývají součástí určité subkultury spojené se specifickou hudbou, módou, způsobem vyjadřování (slangem). Např. surfing začal být vnímán jako sport, který vymezuje určitou část mladé populace vůči ostatní společnosti, v 60-70tých letech minulého století. Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor pro svobodu, distancování se od institucionalizovaných forem moci, vyjádření negativního postoje vůči autoritám.  </h1>
 <hr/>
 <input class="display" id="text27" placeholder="answer">
 <br/>
@@ -705,7 +705,7 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Slepičková: Sociologie životního stylu">28. Sporty životního stylu jsou historicky relativně mladé. Velmi často nějakým způsobem reagují na ... (nezaměstnanost mladých, nesouhlas s dominantními společenskými hodnotami a pod.). Bývají součástí určité subkultury spojené se specifickou hudbou, módou, způsobem vyjadřování (slangem). Např. surfing začal být vnímán jako sport, který vymezuje určitou část mladé populace vůči ostatní společnosti, v 60-70tých letech minulého století. Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor pro svobodu, distancování se od institucionalizovaných forem moci, vyjádření negativního postoje vůči autoritám.  </h1>
+<h1 title="Slepičková: Sociologie životního stylu a sport">28. Sporty životního stylu jsou historicky relativně mladé. Velmi často nějakým způsobem reagují na ... (nezaměstnanost mladých, nesouhlas s dominantními společenskými hodnotami a pod.). Bývají součástí určité subkultury spojené se specifickou hudbou, módou, způsobem vyjadřování (slangem). Např. surfing začal být vnímán jako sport, který vymezuje určitou část mladé populace vůči ostatní společnosti, v 60-70tých letech minulého století. Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor pro svobodu, distancování se od institucionalizovaných forem moci, vyjádření negativního postoje vůči autoritám.  </h1>
 <hr/>
 <input class="display" id="text28" placeholder="answer">
 <br/>
@@ -715,7 +715,7 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Slepičková: Sociologie životního stylu">29. Sporty životního stylu jsou historicky relativně mladé. Velmi často nějakým způsobem reagují na vývoj společnosti (... a pod.). Bývají součástí určité subkultury spojené se specifickou hudbou, módou, způsobem vyjadřování (slangem). Např. surfing začal být vnímán jako sport, který vymezuje určitou část mladé populace vůči ostatní společnosti, v 60-70tých letech minulého století. Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor pro svobodu, distancování se od institucionalizovaných forem moci, vyjádření negativního postoje vůči autoritám.  </h1>
+<h1 title="Slepičková: Sociologie životního stylu a sport">29. Sporty životního stylu jsou historicky relativně mladé. Velmi často nějakým způsobem reagují na vývoj společnosti (... a pod.). Bývají součástí určité subkultury spojené se specifickou hudbou, módou, způsobem vyjadřování (slangem). Např. surfing začal být vnímán jako sport, který vymezuje určitou část mladé populace vůči ostatní společnosti, v 60-70tých letech minulého století. Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor pro svobodu, distancování se od institucionalizovaných forem moci, vyjádření negativního postoje vůči autoritám.  </h1>
 <hr/>
 <input class="display" id="text29" placeholder="answer">
 <br/>
@@ -725,7 +725,7 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Slepičková: Sociologie životního stylu">30. Sporty životního stylu jsou historicky relativně mladé. Velmi často nějakým způsobem reagují na vývoj společnosti (nezaměstnanost mladých, nesouhlas s dominantními společenskými hodnotami a pod.). Bývají součástí ... spojené se specifickou hudbou, módou, způsobem vyjadřování (slangem). Např. surfing začal být vnímán jako sport, který vymezuje určitou část mladé populace vůči ostatní společnosti, v 60-70tých letech minulého století. Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor pro svobodu, distancování se od institucionalizovaných forem moci, vyjádření negativního postoje vůči autoritám.  </h1>
+<h1 title="Slepičková: Sociologie životního stylu a sport">30. Sporty životního stylu jsou historicky relativně mladé. Velmi často nějakým způsobem reagují na vývoj společnosti (nezaměstnanost mladých, nesouhlas s dominantními společenskými hodnotami a pod.). Bývají součástí ... spojené se specifickou hudbou, módou, způsobem vyjadřování (slangem). Např. surfing začal být vnímán jako sport, který vymezuje určitou část mladé populace vůči ostatní společnosti, v 60-70tých letech minulého století. Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor pro svobodu, distancování se od institucionalizovaných forem moci, vyjádření negativního postoje vůči autoritám.  </h1>
 <hr/>
 <input class="display" id="text30" placeholder="answer">
 <br/>
@@ -735,7 +735,7 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Slepičková: Sociologie životního stylu">31. Sporty životního stylu jsou historicky relativně mladé. Velmi často nějakým způsobem reagují na vývoj společnosti (nezaměstnanost mladých, nesouhlas s dominantními společenskými hodnotami a pod.). Bývají součástí určité subkultury spojené se specifickou ... (slangem). Např. surfing začal být vnímán jako sport, který vymezuje určitou část mladé populace vůči ostatní společnosti, v 60-70tých letech minulého století. Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor pro svobodu, distancování se od institucionalizovaných forem moci, vyjádření negativního postoje vůči autoritám.  </h1>
+<h1 title="Slepičková: Sociologie životního stylu a sport">31. Sporty životního stylu jsou historicky relativně mladé. Velmi často nějakým způsobem reagují na vývoj společnosti (nezaměstnanost mladých, nesouhlas s dominantními společenskými hodnotami a pod.). Bývají součástí určité subkultury spojené se specifickou ... (slangem). Např. surfing začal být vnímán jako sport, který vymezuje určitou část mladé populace vůči ostatní společnosti, v 60-70tých letech minulého století. Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor pro svobodu, distancování se od institucionalizovaných forem moci, vyjádření negativního postoje vůči autoritám.  </h1>
 <hr/>
 <input class="display" id="text31" placeholder="answer">
 <br/>
@@ -745,7 +745,7 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Slepičková: Sociologie životního stylu">32. Sporty životního stylu jsou historicky relativně mladé. Velmi často nějakým způsobem reagují na vývoj společnosti (nezaměstnanost mladých, nesouhlas s dominantními společenskými hodnotami a pod.). Bývají součástí určité subkultury spojené se specifickou hudbou, módou, způsobem vyjadřování (slangem). Např. surfing začal být vnímán jako sport, který ... část mladé populace vůči ostatní společnosti, v 60-70. letech minulého století. Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor pro svobodu, distancování se od institucionalizovaných forem moci, vyjádření negativního postoje vůči autoritám.  </h1>
+<h1 title="Slepičková: Sociologie životního stylu a sport">32. Sporty životního stylu jsou historicky relativně mladé. Velmi často nějakým způsobem reagují na vývoj společnosti (nezaměstnanost mladých, nesouhlas s dominantními společenskými hodnotami a pod.). Bývají součástí určité subkultury spojené se specifickou hudbou, módou, způsobem vyjadřování (slangem). Např. surfing začal být vnímán jako sport, který ... část mladé populace vůči ostatní společnosti, v 60-70. letech minulého století. Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor pro svobodu, distancování se od institucionalizovaných forem moci, vyjádření negativního postoje vůči autoritám.  </h1>
 <hr/>
 <input class="display" id="text32" placeholder="answer">
 <br/>
@@ -755,7 +755,7 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Slepičková: Sociologie životního stylu">33. Sporty životního stylu jsou historicky relativně mladé. Velmi často nějakým způsobem reagují na vývoj společnosti (nezaměstnanost mladých, nesouhlas s dominantními společenskými hodnotami a pod.). Bývají součástí určité subkultury spojené se specifickou hudbou, módou, způsobem vyjadřování (slangem). Např. surfing začal být vnímán jako sport, který vymezuje určitou část mladé populace vůči ostatní společnosti, v ... . Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor pro svobodu, distancování se od institucionalizovaných forem moci, vyjádření negativního postoje vůči autoritám.  </h1>
+<h1 title="Slepičková: Sociologie životního stylu a sport">33. Sporty životního stylu jsou historicky relativně mladé. Velmi často nějakým způsobem reagují na vývoj společnosti (nezaměstnanost mladých, nesouhlas s dominantními společenskými hodnotami a pod.). Bývají součástí určité subkultury spojené se specifickou hudbou, módou, způsobem vyjadřování (slangem). Např. surfing začal být vnímán jako sport, který vymezuje určitou část mladé populace vůči ostatní společnosti, v ... . Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor pro svobodu, distancování se od institucionalizovaných forem moci, vyjádření negativního postoje vůči autoritám.  </h1>
 <hr/>
 <input class="display" id="text33" placeholder="answer">
 <br/>
@@ -765,7 +765,7 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Slepičková: Sociologie životního stylu">34. Sporty životního stylu jsou historicky relativně mladé. Velmi často nějakým způsobem reagují na vývoj společnosti (nezaměstnanost mladých, nesouhlas s dominantními společenskými hodnotami a pod.). Bývají součástí určité subkultury spojené se specifickou hudbou, módou, způsobem vyjadřování (slangem). Např. surfing začal být vnímán jako sport, který vymezuje určitou část mladé populace vůči ostatní společnosti, v 60-70. letech minulého století. Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor ... , distancování se od institucionalizovaných forem moci, vyjádření negativního postoje vůči autoritám.  </h1>
+<h1 title="Slepičková: Sociologie životního stylu a sport">34. Sporty životního stylu jsou historicky relativně mladé. Velmi často nějakým způsobem reagují na vývoj společnosti (nezaměstnanost mladých, nesouhlas s dominantními společenskými hodnotami a pod.). Bývají součástí určité subkultury spojené se specifickou hudbou, módou, způsobem vyjadřování (slangem). Např. surfing začal být vnímán jako sport, který vymezuje určitou část mladé populace vůči ostatní společnosti, v 60-70. letech minulého století. Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor ... , distancování se od institucionalizovaných forem moci, vyjádření negativního postoje vůči autoritám.  </h1>
 <hr/>
 <input class="display" id="text34" placeholder="answer">
 <br/>
@@ -775,7 +775,7 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Slepičková: Sociologie životního stylu">35. Sporty životního stylu jsou historicky relativně mladé. Velmi často nějakým způsobem reagují na vývoj společnosti (nezaměstnanost mladých, nesouhlas s dominantními společenskými hodnotami a pod.). Bývají součástí určité subkultury spojené se specifickou hudbou, módou, způsobem vyjadřování (slangem). Např. surfing začal být vnímán jako sport, který vymezuje určitou část mladé populace vůči ostatní společnosti, v 60-70tých letech minulého století. Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor pro svobodu, distancování se od ..., vyjádření negativního postoje vůči autoritám.  </h1>
+<h1 title="Slepičková: Sociologie životního stylu a sport">35. Sporty životního stylu jsou historicky relativně mladé. Velmi často nějakým způsobem reagují na vývoj společnosti (nezaměstnanost mladých, nesouhlas s dominantními společenskými hodnotami a pod.). Bývají součástí určité subkultury spojené se specifickou hudbou, módou, způsobem vyjadřování (slangem). Např. surfing začal být vnímán jako sport, který vymezuje určitou část mladé populace vůči ostatní společnosti, v 60-70tých letech minulého století. Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor pro svobodu, distancování se od ..., vyjádření negativního postoje vůči autoritám.  </h1>
 <hr/>
 <input class="display" id="text35" placeholder="answer">
 <br/>
@@ -785,7 +785,7 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Slepičková: Sociologie životního stylu">36. Sporty životního stylu jsou historicky relativně mladé. Velmi často nějakým způsobem reagují na vývoj společnosti (nezaměstnanost mladých, nesouhlas s dominantními společenskými hodnotami a pod.). Bývají součástí určité subkultury spojené se specifickou hudbou, módou, způsobem vyjadřování (slangem). Např. surfing začal být vnímán jako sport, který vymezuje určitou část mladé populace vůči ostatní společnosti, v 60-70tých letech minulého století. Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor pro svobodu, distancování se od institucionalizovaných forem moci, vyjádření negativního ... .  </h1>
+<h1 title="Slepičková: Sociologie životního stylu a sport">36. Sporty životního stylu jsou historicky relativně mladé. Velmi často nějakým způsobem reagují na vývoj společnosti (nezaměstnanost mladých, nesouhlas s dominantními společenskými hodnotami a pod.). Bývají součástí určité subkultury spojené se specifickou hudbou, módou, způsobem vyjadřování (slangem). Např. surfing začal být vnímán jako sport, který vymezuje určitou část mladé populace vůči ostatní společnosti, v 60-70tých letech minulého století. Svým provozovatelům, kteří měli hodně volného času (často proto, že byli nezaměstnaní), dával prostor pro svobodu, distancování se od institucionalizovaných forem moci, vyjádření negativního ... .  </h1>
 <hr/>
 <input class="display" id="text36" placeholder="answer">
 <br/>
@@ -795,23 +795,23 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Zdroj: https://dl3.cuni.cz/pluginfile.php/117807/mod_resource/content/1/Sokol%20-%20Deontologie%20-%20Kant%20-%20kategorick%C3%BD%20imperativ.pdf str. 103">37. Podle ... spolehlivým a univerzálním vodítkem mravního hodnocení a rozhodování může být jedině rozum.  </h1>
+<h1 title="Slepičková: Sociologie životního stylu a sport">37. Podle Weaton (2004) je u lidí angažujících se ve sportech životního stylu kladen důraz na vlastní („prostou“) účast, nikoli kvůli mediální prezentaci. Přesto však jsou tito sportovci rádi předmětem ... . </h1>
 <hr/>
 <input class="display" id="text37" placeholder="answer">
 <br/>
 <button onclick="fn37()" id = "btn37">Klikni</button>
 <button id="cudlik37" style="display:none" onclick="next(37)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Immanuela Kanta'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='zájmu a obdivu druhých'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1>38. Konstitutivní pravidla sportu ... </h1>
+<h1 title="Slepičková: Sociologie životního stylu a sport">38. Sportovci angažující se ve sportech životního stylu často odsuzují či odmítají ..., podřizování se pravidlům, ... a vazby na soutěžní sport. </h1>
 <hr/>
 <input class="display" id="text38" placeholder="answer">
 <br/>
 <button onclick="fn38()" id = "btn38">Klikni</button>
 <button id="cudlik38" style="display:none" onclick="next(38)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='udávají prostor sportu'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='institutionalizaci, komercionalizaci'">Tajenka</p>
 </div>
 
 <div class="container">
@@ -1744,7 +1744,7 @@ document.getElementById('zvuk36').play(); return false;
 
 function fn37()
 {
-if (document.getElementById("text37").value == "Immanuela Kanta") {
+if (document.getElementById("text37").value == "zájmu a obdivu druhých") {
 document.getElementById('cudlik37').style.display = "inline";
 document.getElementById('zvuk37').play(); return false;
 }
@@ -1753,7 +1753,7 @@ document.getElementById('zvuk37').play(); return false;
 
 function fn38()
 {
-if (document.getElementById("text38").value == "udávají prostor sportu") {
+if (document.getElementById("text38").value == "institutionalizaci, komercionalizaci") {
 document.getElementById('cudlik38').style.display = "inline";
 document.getElementById('zvuk38').play(); return false;
 }
