--- a/index.html
+++ b/index.html
@@ -1611,7 +1611,7 @@ document.getElementById('zvuk20').play(); return false;
 
 function fn21()
 {
-if (document.getElementById("text21").value == "Šafr, synonyma") {
+if (document.getElementById("text21").value == "Šafr; synonyma") {
 document.getElementById('cudlik21').style.display = "inline"
 document.getElementById('zvuk21').play(); return false;;
 }
