zase dalsi otazky

--- a/index.html
+++ b/index.html
@@ -815,43 +815,43 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1>39. "Kritika čistého rozumu" německy: </h1>
+<h1 title="Služby ve sportu, STurismus1.pptx">39. Služba je ... (Šik, 1968). </h1>
 <hr/>
 <input class="display" id="text39" placeholder="answer">
 <br/>
 <button onclick="fn39()" id = "btn39">Klikni</button>
 <button id="cudlik39" style="display:none" onclick="next(39)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Kritik der reinen Vernunft'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='určitá činnost'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1>40. "Kritika praktického rozumu" německy </h1>
+<h1 title="Služby ve sportu, STurismus1.pptx">40. Služba je určitá činnost, ... (Šik, 1968). </h1>
 <hr/>
 <input class="display" id="text40" placeholder="answer">
 <br/>
 <button onclick="fn40()" id = "btn40">Klikni</button>
 <button id="cudlik40" style="display:none" onclick="next(40)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Kritik der praktischen Vernunft'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='která působí na lidi'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1>41. "Kritika soudnosti" německy </h1>
+<h1 title="Služby ve sportu, STurismus1.pptx">41. Služba je určitá činnost, která působí na lidi a poskytuje jim užitek ... (Šik, 1968). </h1>
 <hr/>
 <input class="display" id="text41" placeholder="answer">
 <br/>
 <button onclick="fn41()" id = "btn41">Klikni</button>
 <button id="cudlik41" style="display:none" onclick="next(41)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Kritik der Urteilskraft'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='a poskytuje jim užitek'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: https://dl3.cuni.cz/pluginfile.php/117809/mod_resource/content/1/Sokol%20-%20Utilitarismus.pdf str. 121">42. Jedna ze slabin utilitarismu (tzn. etiky důsledků) je ta, že ... </h1>
+<h1 title="Služby ve sportu, STurismus1.pptx">42. Služba je určitá činnost, která působí na lidi poskytuje jim užitek ať ... (Šik, 1968). </h1>
 <hr/>
 <input class="display" id="text42" placeholder="answer">
 <br/>
 <button onclick="fn42()" id = "btn42">Klikni</button>
 <button id="cudlik42" style="display:none" onclick="next(42)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='v momentě rozhodování důsledky nevíme'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='duševní nebo fyzický'">Tajenka</p>
 </div>
 
 <div class="container">
@@ -1761,7 +1761,7 @@ document.getElementById('zvuk38').play(); return false;
 
 function fn39()
 {
-if (document.getElementById("text39").value == "Kritik der reinen Vernunft") {
+if (document.getElementById("text39").value == "určitá činnost") {
 document.getElementById('cudlik39').style.display = "inline";
 document.getElementById('zvuk39').play(); return false;
 }
@@ -1769,7 +1769,7 @@ document.getElementById('zvuk39').play(); return false;
 
 function fn40()
 {
-if (document.getElementById("text40").value == "Kritik der praktischen Vernunft") {
+if (document.getElementById("text40").value == "která působí na lidi") {
 document.getElementById('cudlik40').style.display = "inline";
 document.getElementById('zvuk40').play(); return false;
 }
@@ -1778,7 +1778,7 @@ document.getElementById('zvuk40').play(); return false;
 
 function fn41()
 {
-if (document.getElementById("text41").value == "Kritik der Urteilskraft") {
+if (document.getElementById("text41").value == "a poskytuje jim užitek") {
 document.getElementById('cudlik41').style.display = "inline";
 document.getElementById('zvuk41').play(); return false;
 }
@@ -1786,7 +1786,7 @@ document.getElementById('zvuk41').play(); return false;
 
 function fn42()
 {
-if (document.getElementById("text42").value == "v momentě rozhodování důsledky nevíme") {
+if (document.getElementById("text42").value == "duševní nebo fyzický") {
 document.getElementById('cudlik42').style.display = "inline";
 document.getElementById('zvuk42').play(); return false;
 }
