a zase dalsi otazky

--- a/index.html
+++ b/index.html
@@ -855,23 +855,23 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1>43. Jaké jsou druhy vnitřních cílů ve sportu? </h1>
+<h1 title="Služby ve sportu, STurismus1.pptx">43. Znaky služeb jsou </h1>
 <hr/>
 <input class="display" id="text43" placeholder="answer">
 <br/>
 <button onclick="fn43()" id = "btn43">Klikni</button>
 <button id="cudlik43" style="display:none" onclick="next(43)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='úkolové a soutěžní'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='nehmotnost, nestandardnost'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1>44. Uveď některé vnitřní hodnoty sportu </h1>
+<h1 title="Služby ve sportu, STurismus1.pptx">44. Znaky služeb jsou nehmotnost, nestandardnost ... </h1>
 <hr/>
 <input class="display" id="text44" placeholder="answer">
 <br/>
 <button onclick="fn44()" id = "btn44">Klikni</button>
 <button id="cudlik44" style="display:none" onclick="next(44)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='soutěžní, asketické, morální'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='jednotnost, neskladovatelnost'">Tajenka</p>
 </div>
 
 <div class="container">
@@ -1794,7 +1794,7 @@ document.getElementById('zvuk42').play(); return false;
 
 function fn43()
 {
-if (document.getElementById("text43").value == "úkolové a soutěžní") {
+if (document.getElementById("text43").value == "nehmotnost, nestandardnost") {
 document.getElementById('cudlik43').style.display = "inline";
 document.getElementById('zvuk43').play(); return false;
 }
@@ -1802,7 +1802,7 @@ document.getElementById('zvuk43').play(); return false;
 
 function fn44()
 {
-if (document.getElementById("text44").value == "soutěžní, asketické, morální") {
+if (document.getElementById("text44").value == "jednotnost, neskladovatelnost") {
 document.getElementById('cudlik44').style.display = "inline";
 document.getElementById('zvuk44').play(); return false;
 }
