--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Slepičková: Sociologie životního stylu a sport">22. Zde, jak je patrno, v českých pracích ... a ani neexistuje ... . V zahraniční pracích (např. Kay, 2006; Mehus, 2005; Mignon, 2002; Sack, 2000; Slater, 2005; Weaton, 2004) tomuto problému není přikládána váha, zřejmě proto, že zde není mezi pojmy spatřován žádný rozdíl a hovoří se pouze o životním stylu. </h1>
+<h1 title="Slepičková: Sociologie životního stylu a sport">22. Zde, jak je patrno, v českých pracích (mezi pojmy "životní styl" a "způsob života") ... a ani neexistuje ... . V zahraniční pracích (např. Kay, 2006; Mehus, 2005; Mignon, 2002; Sack, 2000; Slater, 2005; Weaton, 2004) tomuto problému není přikládána váha, zřejmě proto, že zde není mezi pojmy spatřován žádný rozdíl a hovoří se pouze o životním stylu. </h1>
 <hr/>
 <input class="display" id="text22" placeholder="answer">
 <br/>
