--- a/index.html
+++ b/index.html
@@ -885,43 +885,43 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1>46. Kdo napsal "Etika Níkomachova" ? </h1>
+<h1>46. Fáze adolescence jsou... .</h1>
 <hr/>
 <input class="display" id="text46" placeholder="answer">
 <br/>
 <button onclick="fn46()" id = "btn46">Klikni</button>
 <button id="cudlik46" style="display:none" onclick="next(46)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Aristotelés'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='časná, střední, pozdní'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: prezentace">47. Etiky zaměřené na výsledek jednání se nazývají? </h1>
+<h1 title="Zdroj: prezentace">47. Časná adolescence je ve věku ... . </h1>
 <hr/>
 <input class="display" id="text47" placeholder="answer">
 <br/>
 <button onclick="fn47()" id = "btn47">Klikni</button>
 <button id="cudlik47" style="display:none" onclick="next(47)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='teleologické etiky'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='11-13 let'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: prezentace">48. Jaké etiky patří mezi teleologické etiky? </h1>
+<h1 title="Zdroj: prezentace">48. Pozdní adolescence je ve věku ... . </h1>
 <hr/>
 <input class="display" id="text48" placeholder="answer">
 <br/>
 <button onclick="fn48()" id = "btn48">Klikni</button>
 <button id="cudlik48" style="display:none" onclick="next(48)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='utilitarismus a etika ctností'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='17-20 let i déle'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: prezentace">49. "statečnost" - doplň případné ctnosti a extrémy </h1>
+<h1 title="Zdroj: prezentace">49. Střední adolescence je ve věku ... . </h1>
 <hr/>
 <input class="display" id="text49" placeholder="answer">
 <br/>
 <button onclick="fn49()" id = "btn49">Klikni</button>
 <button id="cudlik49" style="display:none" onclick="next(49)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='nebojácnost, zbabělost'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='14-16 let'">Tajenka</p>
 </div>
 
 <div class="container">
@@ -1819,7 +1819,7 @@ document.getElementById('zvuk45').play(); return false;
 
 function fn46()
 {
-if (document.getElementById("text46").value == "Aristotelés") {
+if (document.getElementById("text46").value == "časná, střední, pozdní") {
 document.getElementById('cudlik46').style.display = "inline";
 document.getElementById('zvuk46').play(); return false;
 }
@@ -1828,7 +1828,7 @@ document.getElementById('zvuk46').play(); return false;
 
 function fn47()
 {
-if (document.getElementById("text47").value == "teleologické etiky") {
+if (document.getElementById("text47").value == "11-13 let") {
 document.getElementById('cudlik47').style.display = "inline";
 document.getElementById('zvuk47').play(); return false;
 }
@@ -1837,7 +1837,7 @@ document.getElementById('zvuk47').play(); return false;
 
 function fn48()
 {
-if (document.getElementById("text48").value == "utilitarismus a etika ctností") {
+if (document.getElementById("text48").value == "17-20 let i déle") {
 document.getElementById('cudlik48').style.display = "inline";
 document.getElementById('zvuk48').play(); return false;
 }
@@ -1845,7 +1845,7 @@ document.getElementById('zvuk48').play(); return false;
 
 function fn49()
 {
-if (document.getElementById("text49").value == "nebojácnost, zbabělost") {
+if (document.getElementById("text49").value == "14-16 let") {
 document.getElementById('cudlik49').style.display = "inline";
 document.getElementById('zvuk49').play(); return false;
 }
