--- a/index.html
+++ b/index.html
@@ -1619,7 +1619,7 @@ document.getElementById('zvuk21').play(); return false;;
 
 function fn22()
 {
-if (document.getElementById("text22").value == "John Locke; Hobbesova teorie") {
+if (document.getElementById("text22").value == "shoda neexistuje; opodstatněné vysvětlení rozdílu") {
 document.getElementById('cudlik22').style.display = "inline";
 document.getElementById('zvuk22').play(); return false;
 }
