--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Služby ve sportu, STurismus1.pptx">41. Služba je určitá činnost, která působí na lidi a poskytuje jim užitek ... (Šik, 1968). </h1>
+<h1 title="Služby ve sportu, STurismus1.pptx">41. Služba je určitá činnost, která působí na lidi ... (Šik, 1968). </h1>
 <hr/>
 <input class="display" id="text41" placeholder="answer">
 <br/>
